Bug 543077 Can't enter diacritics in message compose window due to switching focus to an editor element via the keyboard (and other issues relating to the switch of focus via keyboard). r=enndeakin,sr=Standard8,a=LegNeato